// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDiagram renders and matches snapshot 1`] = `
"<LineDiagram lineDiagram={{...}} route={{...}} directionId={1} routePatternsByDirection={{...}} services={{...}} stops={{...}}>
  <h3>
    Stops
  </h3>
  <div className=\\"m-schedule-line-diagram__stop\\">
    <div className=\\"m-schedule-line-diagram__card\\">
      <div className=\\"m-schedule-line-diagram__card-left\\">
        <div className=\\"m-schedule-line-diagram__stop-name\\">
          <a href=\\"/stops/5547\\">
            <h4>
              Elm St opp Haskell Ave
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-line-diagram__connections\\">
          <Component href=\\"/schedules/110/line\\" tooltipText=\\"Route 110\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/110/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 110\\" title=\\"Route 110\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                110
              </span>
            </a>
          </Component>
        </div>
      </div>
      <div className=\\"m-schedule-line-diagram__features\\" />
    </div>
    <div className=\\"m-schedule-line-diagram__footer\\">
      <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
        View schedule
      </button>
    </div>
  </div>
  <div className=\\"m-schedule-line-diagram__stop\\">
    <div className=\\"m-schedule-line-diagram__card\\">
      <div className=\\"m-schedule-line-diagram__card-left\\">
        <div className=\\"m-schedule-line-diagram__stop-name\\">
          <a href=\\"/stops/place-tufts\\">
            <h4>
              Tufts Medical Center
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-line-diagram__connections\\">
          <Component href=\\"/schedules/741/line\\" tooltipText=\\"Silver Line SL1\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/741/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Silver Line SL1\\" title=\\"Silver Line SL1\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--silver-line\\">
                SL1
              </span>
            </a>
          </Component>
        </div>
      </div>
      <div className=\\"m-schedule-line-diagram__features\\" />
    </div>
    <div className=\\"m-schedule-line-diagram__footer\\">
      <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
        View schedule
      </button>
    </div>
  </div>
  <div className=\\"m-schedule-line-diagram__stop\\">
    <div className=\\"m-schedule-line-diagram__card\\">
      <div className=\\"m-schedule-line-diagram__card-left\\">
        <div className=\\"m-schedule-line-diagram__stop-name\\">
          <a href=\\"/stops/place-north\\">
            <h4>
              North Station
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-line-diagram__connections\\">
          <Component href=\\"/schedules/Orange/line\\" tooltipText=\\"Orange Line\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/Orange/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Orange Line\\" title=\\"Orange Line\\">
              <span className=\\"m-schedule-line-diagram__connection\\">
                <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/Green-C/line\\" tooltipText=\\"Green Line C\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/Green-C/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Green Line C\\" title=\\"Green Line C\\">
              <span className=\\"m-schedule-line-diagram__connection\\">
                <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/Green-E/line\\" tooltipText=\\"Green Line E\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/Green-E/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Green Line E\\" title=\\"Green Line E\\">
              <span className=\\"m-schedule-line-diagram__connection\\">
                <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/CR-Fitchburg/line\\" tooltipText=\\"Commuter Rail\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/CR-Fitchburg/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Commuter Rail\\" title=\\"Commuter Rail\\">
              <span className=\\"m-schedule-line-diagram__connection\\">
                <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </a>
          </Component>
        </div>
      </div>
      <div className=\\"m-schedule-line-diagram__features\\">
        <Component tooltipText=\\"Parking\\" tooltipOptions={{...}}>
          <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Parking\\" title=\\"Parking\\">
            <span className=\\"notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
          </span>
        </Component>
        <Component tooltipText=\\"Accessible\\" tooltipOptions={{...}}>
          <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Accessible\\" title=\\"Accessible\\">
            <span className=\\"notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
          </span>
        </Component>
        <span className=\\"c-icon__cr-zone m-schedule-line-diagram__feature-icon\\">
          Zone 1A
        </span>
      </div>
    </div>
    <div className=\\"m-schedule-line-diagram__footer\\">
      <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
        View schedule
      </button>
    </div>
  </div>
  <div className=\\"m-schedule-line-diagram__stop\\">
    <div className=\\"m-schedule-line-diagram__card\\">
      <div className=\\"m-schedule-line-diagram__card-left\\">
        <div className=\\"m-schedule-line-diagram__stop-name\\">
          <span className=\\"notranslate c-svg__icon-alerts-triangle\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
          <span className=\\"sr-only\\">
            Service alert or delay
          </span>
           
          <a href=\\"/stops/place-alfcl\\">
            <h4>
              Alewife
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-line-diagram__connections\\">
          <Component href=\\"/schedules/62/line\\" tooltipText=\\"Route 62\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/62/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 62\\" title=\\"Route 62\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                62
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/67/line\\" tooltipText=\\"Route 67\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/67/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 67\\" title=\\"Route 67\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                67
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/76/line\\" tooltipText=\\"Route 76\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/76/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 76\\" title=\\"Route 76\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                76
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/79/line\\" tooltipText=\\"Route 79\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/79/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 79\\" title=\\"Route 79\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                79
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/84/line\\" tooltipText=\\"Route 84\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/84/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 84\\" title=\\"Route 84\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                84
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/350/line\\" tooltipText=\\"Route 350\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/350/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 350\\" title=\\"Route 350\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                350
              </span>
            </a>
          </Component>
          <Component href=\\"/schedules/351/line\\" tooltipText=\\"Route 351\\" tooltipOptions={{...}}>
            <a href=\\"/schedules/351/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 351\\" title=\\"Route 351\\">
              <span className=\\"c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus\\">
                351
              </span>
            </a>
          </Component>
        </div>
      </div>
      <div className=\\"m-schedule-line-diagram__features\\">
        <Component tooltipText=\\"Parking\\" tooltipOptions={{...}}>
          <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Parking\\" title=\\"Parking\\">
            <span className=\\"notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
          </span>
        </Component>
        <Component tooltipText=\\"Accessible\\" tooltipOptions={{...}}>
          <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Accessible\\" title=\\"Accessible\\">
            <span className=\\"notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
          </span>
        </Component>
      </div>
    </div>
    <div className=\\"m-schedule-line-diagram__footer\\">
      <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
        View schedule
      </button>
    </div>
  </div>
  <WrappedModal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}}>
    <Modal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}} priorPadding=\\"0px\\" paddingRight={1024} />
  </WrappedModal>
</LineDiagram>"
`;

exports[`ScheduleModal it renders 1`] = `
Array [
  <div
    className="schedule-finder__modal-header"
  >
    <div>
      <div
        className="h3 u-small-caps"
        style={
          Object {
            "margin": 0,
          }
        }
      >
         
        Inbound
      </div>
      <h2
        className="h2"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        Oak Grove
      </h2>
    </div>
  </div>,
  <div>
    from 
    <a
      href="/stops/place-mlmnl"
    >
      Malden Center
    </a>
  </div>,
]
`;

exports[`can render green line 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Eastbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            All branches
             
            <span
              aria-hidden="true"
              className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders 1`] = `
Array [
  <div
    className="schedule-finder--desktop"
  >
    <div
      className="schedule-finder"
    >
      <h2
        className="h3 schedule-finder__heading"
      >
        <span
          aria-hidden="true"
          className="notranslate c-svg__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
         Schedule Finder
      </h2>
      <div>
        Choose a stop to get schedule information and real-time departure predictions.
      </div>
      <div
        className="c-select-custom__container "
        id="sf_direction_select_container"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <select
          className="c-select-custom"
          id="sf_direction_select"
          onChange={[Function]}
          onKeyUp={[Function]}
          value=""
        >
          <option
            value=""
          >
            Choose a direction
          </option>
          <option
            value="0"
          >
            INBOUND
             
            Oak Grove
          </option>
          <option
            value="1"
          >
            OUTBOUND
             
            Forest Hills
          </option>
        </select>
        <span
          aria-hidden="true"
          className="notranslate c-svg__icon c-select-custom__arrow"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="c-select-custom__container "
        id="sf_origin_select_container"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <select
          className="c-select-custom c-select-custom--noclick"
          id="sf_origin_select"
          onChange={[Function]}
          onKeyUp={[Function]}
          value=""
        >
          <option
            value=""
          >
            Choose an origin stop
          </option>
          <option
            value="place-welln"
          >
            Wellington
          </option>
          <option
            value="123"
          >
            Abc
          </option>
          <option
            value="741"
          >
            SL
          </option>
        </select>
        <span
          aria-hidden="true"
          className="notranslate c-svg__icon c-select-custom__arrow"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
      <div
        className="text-right"
      >
        <input
          className="btn btn-primary"
          onClick={[Function]}
          type="submit"
          value="Get schedules"
        />
      </div>
    </div>
  </div>,
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div><a href=\\"http://some-link\\">Some teaser from CMS></a></div>",
      }
    }
  />,
  <h3
    aria-controls="panel-pdfs"
    aria-expanded={true}
    className="c-expandable-block__header"
    id="header-pdfs"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="c-expandable-block__header-text"
    >
      PDF Schedules
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </div>
  </h3>,
  <div
    aria-labelledby="header-pdfs"
    className="c-expandable-block__panel "
    id="panel-pdfs"
    role="region"
    tabIndex={0}
  >
    <a
      className="m-schedule-page__sidebar-pdfs"
      href="https://mbta.com/example-pdf.pdf"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        aria-hidden="true"
        className="notranslate c-svg__icon-pdf"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Route 1 schedule PDF
    </a>
  </div>,
  <noscript>
    <style>
      #header-pdfs { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      PDF Schedules
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <a
        className="m-schedule-page__sidebar-pdfs"
        href="https://mbta.com/example-pdf.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          aria-hidden="true"
          className="notranslate c-svg__icon-pdf"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Route 1 schedule PDF
      </a>
    </div>
  </noscript>,
  <h3
    aria-controls="panel-fares"
    aria-expanded={false}
    className="c-expandable-block__header"
    id="header-fares"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="c-expandable-block__header-text"
    >
      Fares
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF107;",
          }
        }
      />
    </div>
  </h3>,
  <noscript>
    <style>
      #header-fares { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      Fares
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <p
        className="m-schedule-page__fare"
      >
        <span>
          CharlieCard
        </span>
        <span>
          $2.25
        </span>
      </p>
      <p
        className="m-schedule-page__fare"
      >
        <span>
          CharlieTicket or Cash
        </span>
        <span>
          $2.75
        </span>
      </p>
      <p
        className="m-schedule-page__link"
      >
        <a
          className="c-call-to-action"
          href="/fares/bus-fares"
        >
          More about fares
        </a>
      </p>
    </div>
  </noscript>,
  <h3
    aria-controls="panel-hours"
    aria-expanded={false}
    className="c-expandable-block__header"
    id="header-hours"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="c-expandable-block__header-text"
    >
      Hours of Operation
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF107;",
          }
        }
      />
    </div>
  </h3>,
  <noscript>
    <style>
      #header-hours { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      Hours of Operation
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <div
        className="m-schedule-page__sidebar-hours"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<div class=\\"m-schedule-page__sidebar-hours\\">  <h3 class=\\"hours-period-heading\\">Monday to Friday</h3>
<p class=\\"hours-directions\\">
  <span class=\\"hours-direction-name\\">Inbound</span>
  <span class=\\"hours-time\\">04:17A-12:46A</span>
</p>
<p class=\\"hours-directions\\">
  <span class=\\"hours-direction-name\\">Outbound</span>
  <span class=\\"hours-time\\">05:36A-01:08A</span>
</p>
</div>",
          }
        }
      />
    </div>
  </noscript>,
  <h3
    aria-controls="panel-holidays"
    aria-expanded={false}
    className="c-expandable-block__header"
    id="header-holidays"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="c-expandable-block__header-text"
    >
      Upcoming Holidays
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF107;",
          }
        }
      />
    </div>
  </h3>,
  <noscript>
    <style>
      #header-holidays { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      Upcoming Holidays
      <span
        className="c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <ul
        className="c-unordered-list m-schedule-page__sidebar-list"
      >
        <li
          className="c-unordered-list-item"
        >
          Memorial Day
           (
          May 27, 2019
          )
        </li>
      </ul>
      <a
        className="c-call-to-action"
        href="/holiday"
      >
        View holiday schedules
      </a>
    </div>
  </noscript>,
]
`;

exports[`it renders a bus component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern"
            onClick={[Function]}
            onKeyUp={[Function]}
          >
            Pattern 2
             
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders a subway component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;
